assets/dev/scss/editor/preview/preview.scss
/* ... */
// Section & Container
.elementor-section,
.e-container {

	> .elementor-element-overlay {
		@include start(0);
		bottom: 0;

		&:after {
			position: absolute;
			left: 2px;
			right: 2px;
			top: 2px;
			bottom: 2px;
			outline: 2px solid var( --outline-color );
			animation: section-outline .75s;
		}
	}

	&:hover,
	&.elementor-element-editable {

		> .elementor-element-overlay {

			&:after {
				content: '';
			}
		}
	}

	// Section Full (No more columns) - Overlay
	&-filled {

		.elementor-sortable-placeholder {

			&.elementor-column {
				display: none;
			}
		}

		.elementor-row {

			&.elementor-draggable-over {
				border: 1px solid $editor-danger;
			}
		}
	}
}

// Column
.elementor-column {

	> .elementor-element-overlay {
		@include start(0);
		bottom: 0;

		&:after {
			position: absolute;
			left: 0;
			right: 0;
			top: 0;
			bottom: 0;
			outline: 1px dashed $editor-dark;
		}
	}

	&:hover,
	&.elementor-element-editable {

		> .elementor-element-overlay {
			border: 1px solid $white;

			&:after {
				content: '';
			}
		}
	}

	&.elementor-dragging-on-child {

		> .elementor-element-overlay {
			border: 1px solid $editor-info;

			&:after {
				display: none;
			}
		}
	}

	> .ui-resizable-e, > .ui-resizable-w {
		cursor: col-resize;
		width: 7px;
		position: absolute;
		@include end(-5px);
		top: 0;
		height: 100%;
	}

	&:last-of-type {
		> .ui-resizable-e, > .ui-resizable-w {
			display: none !important;
		}
	}

	@media (max-width: $editor-screen-md-max) {
		> .ui-resizable-e, > .ui-resizable-w {
			display: none !important;
		}
	}
}

// General - Overlay Settings
.elementor-editor-element-settings {
	position: absolute;
	display: flex;
	height: 26px;
	list-style: none;
	margin: 0;
	padding: 0;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 13px;
	font-weight: normal;
	font-style: normal;
	line-height: 1;
	z-index: $first-layer;
	pointer-events: all;
}

.elementor-editor-element-edit {

	@media(min-width: $editor-screen-lg-min) {
		cursor: move;
	}
}

// Section & Container - Overlay Settings
.elementor-editor-section-settings,
.elementor-editor-container-settings {
	height: 24px;
	top: 1px;
	@include start(50%);
	transform: translateX(getValueByDirection(-50%, 50%)) translateY(-100%);
	background-color: var( --primary-color );
	border-radius: 5px 5px 0 0;
	box-shadow: 0px -2px 8px rgba(0, 0, 0, 0.05);

	i.eicon-handle {
		font-size: 16px;
	}

	.elementor-editor-element-setting {

		&:hover {
			background-color: var( --secondary-color );
		}

		&:first-child {
			border-radius: getValueByDirection(5px 0 0 0, 0 5px 0 0);

			&:before {
				content: '';
				position: absolute;
				border: solid transparent;
				top: 2px;
				@include border-end-property(color, var( --primary-color ));
				border-width: getValueByDirection(22px 12px 0 0, 22px 0 0 12px);
				@include end(calc(100% - 1px));
			}

			&:hover {

				&:before {
					@include border-end-property(color, var( --secondary-color ));
				}
			}
		}

		&:last-child {
			border-radius: getValueByDirection(0 5px 0 0, 5px 0 0 0);

			&:after {
				content: '';
				position: absolute;
				border: solid transparent;
				top: 2px;
				@include border-start-property(color, var( --primary-color ));
				border-width: getValueByDirection(22px 0 0 12px, 22px 12px 0 0);
				@include start(calc(100% - 1px));
			}

			&:hover {

				&:after {
					@include border-start-property(color, var( --secondary-color ));
				}
			}
		}
	}
}

// Top Section / Container (Handles inside)
.e-handles-inside,
.elementor-section--handles-inside {

	> .elementor-element-overlay > .elementor-editor-element-settings {
		transform: translateX(-50%);
	  	@if 'rtl' == $direction {
		  transform: translateX(50%);
	  	}
		border-radius: 0 0 5px 5px;

		.elementor-editor-element-setting {
			&:first-child {
				border-radius: getValueByDirection(0 0 0 5px, 0 0 5px 0);

				&:before {
					top: 0;
					border-width: getValueByDirection(0 12px 22px 0, 0 0 22px 12px);
				}
			}

			&:last-child {
				border-radius: getValueByDirection(0 0 5px 0, 0 0 0 5px);

				&:after {
					top: 0;
					border-width: getValueByDirection(0 0 22px 12px, 0 12px 22px 0);
				}
			}
		}
	}
}

// Column - Overlay Settings
.elementor-editor-column-settings {
	top: -1px;
	@include start(-1px);
	border-radius: getValueByDirection(0 0 3px 0, 0 0 0 3px);
	overflow: hidden;

	.elementor-editor-element-setting {
		background-color: $editor-darkest;

		&:not(:hover) {
			background-image: linear-gradient(to bottom, $editor-dark, $editor-darker);
		}
	}
}

// Widget - Overlay Settings
.elementor-editor-widget-settings {
	z-index: $second-layer;
	top: -1px;
	@include end(-1px);
	flex-direction: row-reverse;
	border-radius: getValueByDirection(0 0 0 3px, 0 0 3px 0);
	overflow: hidden;

	.elementor-editor-element-setting {
		background-color: darken($editor-info, 20%);

		&:not(:hover) {
			background-image: linear-gradient(to top, darken($editor-info, 10%), $editor-info);
		}
	}
}

.elementor-empty-view {
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	z-index: $first-layer;
}

.elementor-first-add {
	text-align: center;
	border: 1px dashed $editor-lightest;
	display: flex;
	height: 100%;
	width: 100%;
	position: absolute;
	align-items: center;
	justify-content: center;

	.elementor-icon {
		font-size: 19px;
		color: $editor-light;
		cursor: pointer;
	}
}

.elementor-sortable-helper {
	position: absolute;
	border-radius: 3px;
	background-color: #fff;
	text-align: center;
	color: $editor-darker;
	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
	cursor: move;

	.icon {
		font-size: 28px;
		padding-top: 15px;
		line-height: 1;
	}

	.elementor-element-title-wrapper {
		display: table;
		width: 100%;
	}

	.title {
		font-size: 11px;
		font-family: Arial, Helvetica, sans-serif;
		font-weight: normal;
		font-style: normal;
		display: table-cell;
		vertical-align: middle;
		height: 40px;
	}
}
/* ... */

